--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@google/genai": "^0.8.0"
   }
 }
