--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
   "name": "agent-builder",
   "version": "0.1.0",
+  "description": "A flexible AI agent builder for structured prompts and responses",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepublishOnly": "npm run build && npm test",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LoreviQ/agent-builder.git"
   },
-  "keywords": [],
+  "keywords": [
+    "ai",
+    "agent",
+    "prompt-engineering",
+    "llm"
+  ],
   "author": "",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/LoreviQ/agent-builder/issues"
   },
   "homepage": "https://github.com/LoreviQ/agent-builder#readme",
-  "description": "",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
